# Low-level-programming_3

./: .gitignore  CMakeLists.txt  batch_process.sh  client.c  json_execute.c  json_execute.h  json_tree.c  json_tree.h  queries.txt  select.txt  server.c
database/: data.c  data.h  data_struct.h  database.c  database.h  idata.c  idata.h
include/: json_inc.h
parser/: array_list.c  array_list.h  bison.y  lex.l  request_tree.c  request_tree.h
tcp/server/: server.c
